@@ -1,5 +1,7 @@
 v0.3.5 - Unpublished development build
 - Ability to create shortcuts to library sources not showing content from source selected
+- Ability to clone widget and background properties from main menu to submenu items
+- New management dialog controls to show management dialog for additional sub-menus
 - Fixes
  > Fix for setting skin thumbnail property when using Just Select method
  > Fix for menus failing to build when the action for a shortcut contains a unicode character
